--- a/_pages/about.html
+++ b/_pages/about.html
@@ -5,7 +5,7 @@ permalink: /about
 ---
 
 <div class="about">
-  <h1 class="page-title">About</h1>
+  <h1 class="page-title">About html</h1>
   
   <div class="about-content">
     <p>欢迎来到我的数字花园！</p>
