--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -5,7 +5,7 @@ permalink: /tags
 ---
 
 <div class="tags">
-  <h1 class="page-title">Tags</h1>
+  <h1 class="page-title">Tags html </h1>
   
   {% assign all_tags = site.tags | sort %}
   
